@@ -38,6 +38,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20508: Improve exception message of IPv{4,6}Network.__getitem__.
+  Patch by Gareth Rees.
+
 - Issue #21386: Implement missing IPv4Address.is_global property.  It was
   documented since 07a5610bae9d.  Initial patch by Roger Luethi.
 
